Added lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -33,7 +33,7 @@
 				<li>1 teaspoon ground nutmeg</li>
 				<li>2 cups shredded mozzarella cheese</li>
 			</ul>
-		</section>i
+		</section>
 		<section>
 			<h3>Steps</h3>
 			<ol>
