--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Pizza</title>
-	</head>
-	<body>
-		<header>
-			<h1>Pizza</h1>
-			<figure>
-				<img src="https://www.allrecipes.com/thmb/yyhFgxHA8tGMEp3ttpSY6ZnVgQQ=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20171-quick-and-easy-pizza-crust-VilmaNg-4x3-f3d3bfe73e3a47b6b65a7da6de3f213d.jpg" alt="Image of Pizza dish">
-				<figcaption>Graphic image showing Pizza Dish</figcaption>
-			</figure>
-		</header>
-		<section>
-			<h3>Description</h3>
-			<p><em>Pizza</em> is a beloved dish that originated in </em>Italy</em> and has since become a <em>global favorite</em>. It consists of a round, flat crust made from dough, typically topped with tomato sauce, cheese, and various other ingredients. Classic toppings include pepperoni, sausage, mushrooms, onions, and olives, while more creative varieties might feature ingredients like arugula, prosciutto, or pineapple. The crust can range from thin and crispy to thick and chewy, depending on regional styles. Once baked, the cheese melts into a gooey layer, and the toppings blend with the sauce, creating a savory, mouthwatering combination in every slice.</p>
-		</section>
-		<section>
-			<h3>Ingredients</h3>
-			<ul>
-				<li>1 cup warm water (110 degrees F/45 degrees C)</li>
-				<li>1 (.25 ounce) package active dry yeast</li>
-				<li>1 teaspoon white sugar</li>
-				<li>2 cups bread flour</li>
-				<li>2 tablespoons olive oil</li>
-				<li>1 teaspoon salt</li>
-			</ul>
-		</section>
-		<section>
-			<h3>Steps</h3>
-			<ol>
-				<li>Gather all ingredients. Preheat oven to 450 degrees F (230 degrees C), and lightly grease a pizza pan.</li>
-				<li>Place warm water in a bowl; add yeast and sugar. Mix and let stand until creamy, about 10 minutes.</li>
-				<li>Add flour, oil, and salt to the yeast mixture; beat until smooth. You can do this by hand or use a stand mixer fitted with a dough hook to make it easier.</li>
-				<li>Let rest for 5 minutes.</li>
-				<li>Turn dough out onto a lightly floured surface and pat or roll into a 12-inch circle.</li>
-				<li>Transfer to the prepared pizza pan.</li>
-				<li>Spread crust with sauce and toppings of your choice.</li>
-				<li>Bake in the preheated oven until golden brown, 15 to 20 minutes. Remove from the oven and let cool for 5 minutes before serving.</li>
-			</ol>
-		</section>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pizza</title>
+  </head>
+  <body>
+    <header>
+      <h1>Pizza</h1>
+      <figure>
+        <img
+          src="https://www.allrecipes.com/thmb/yyhFgxHA8tGMEp3ttpSY6ZnVgQQ=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20171-quick-and-easy-pizza-crust-VilmaNg-4x3-f3d3bfe73e3a47b6b65a7da6de3f213d.jpg"
+          alt="Image of Pizza dish"
+        />
+        <figcaption>Graphic image showing Pizza Dish</figcaption>
+      </figure>
+    </header>
+    <section>
+      <h3>Description</h3>
+      <p>
+        <em>Pizza</em> is a beloved dish that originated in <em>Italy</em> and has since become a <em>global favorite</em>. It consists of a round, flat crust made from dough, typically topped with tomato sauce, cheese, and various other ingredients. Classic toppings include pepperoni, sausage, mushrooms, onions, and olives, while more creative varieties might feature ingredients like arugula, prosciutto, or pineapple. The crust can range from thin and crispy to thick and chewy, depending on regional styles. Once baked, the cheese melts into a gooey layer, and the toppings blend with the sauce, creating a savory, mouthwatering combination in every slice.
+      </p>
+    </section>
+    <section>
+      <h3>Ingredients</h3>
+      <ul>
+        <li>1 cup warm water (110 degrees F/45 degrees C)</li>
+        <li>1 (.25 ounce) package active dry yeast</li>
+        <li>1 teaspoon white sugar</li>
+        <li>2 cups bread flour</li>
+        <li>2 tablespoons olive oil</li>
+        <li>1 teaspoon salt</li>
+      </ul>
+    </section>
+    <section>
+      <h3>Steps</h3>
+      <ol>
+        <li>Gather all ingredients. Preheat oven to 450 degrees F (230 degrees C), and lightly grease a pizza pan.</li>
+        <li>Place warm water in a bowl; add yeast and sugar. Mix and let stand until creamy, about 10 minutes.</li>
+        <li>Add flour, oil, and salt to the yeast mixture; beat until smooth. You can do this by hand or use a stand mixer fitted with a dough hook to make it easier.</li>
+        <li>Let rest for 5 minutes.</li>
+        <li>Turn dough out onto a lightly floured surface and pat or roll into a 12-inch circle.</li>
+        <li>Transfer to the prepared pizza pan.</li>
+        <li>Spread crust with sauce and toppings of your choice.</li>
+        <li>Bake in the preheated oven until golden brown, 15 to 20 minutes. Remove from the oven and let cool for 5 minutes before serving.</li>
+      </ol>
+    </section>
+  </body>
 </html>
