--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a><li>
-				<li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a><li>
-				<li><a href="recipes/pancake.html" target="_blank" rel="noopener noreferrer">Pancake</a><li>
-				
+				<li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+				<li><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a></li>
+				<li><a href="recipes/pancake.html" target="_blank" rel="noopener noreferrer">Pancake</a></li>
 			</ul>
 		</nav>
 	</body>
